# parsebnf

./: CONTRIBUTING.md  Parsebnf.hs  README.md  parsebnf.cabal
src/: CLI.hs  EBNFInterpreter.hs  EBNFParser.hs  IREvaluator.hs  IRGenerator.hs  Main.hs  Parser.hs  StreamIO.hs
