name:                parsebnf
version:             0.0.1.0
synopsis:            Extended Backus-Naur Form to JSON AST parser
-- description:         
homepage:            https://github.com/chop-lang/parsebnf
license:             MIT
license-file:        LICENSE
author:              Carter Hinsley
maintainer:          carterhinsley@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable parsebnf
  main-is:             Main.hs
  other-modules:       CLI,
                       EBNFParser,
                       IRGenerator
  -- other-extensions:    
  build-depends:       base  ==4.7.*,
                       split ==0.2.*,
                       text  ==1.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010

